style: fix some overflow text style
1. fixed overflow style as below
  - header top nick name
  - user side bar nick name
  - doc card item user name
  - order item point and file names
2. fixed horizontal scrollbar height

--- a/src/components/Business/HeaderTop/header-top.styl
+++ b/src/components/Business/HeaderTop/header-top.styl
@@ -83,7 +83,10 @@ header
     text-align: left
     color: #fff
     .nick
+      overflow: hidden
+      max-width: 180px
       font-size: 12px
+      text-overflow: ellipsis
       opacity: .8
   img
     float: left
