--- a/src/components/Business/ManageBoard/Order/order-item.styl
+++ b/src/components/Business/ManageBoard/Order/order-item.styl
@@ -11,12 +11,18 @@
   margin-left: 12px
   font-size: 20px
   vertical-align: middle
-  color: #0d5f92
+  color: blue-text
+
+.point-name
+  display: inline-block
+  overflow: hidden
+  max-width: 260px
+  white-space: nowrap
+  text-overflow: ellipsis
 
 .date
   font-size: 14px
-  color: #9f9f9f
-
+  color: gray-text
 
 .infom-item
   overflow: hidden
@@ -38,7 +44,7 @@
   i
     margin-top: 28px
     font-size: 42px
-    color: #0e90d2
+    color: blue-text
 .item-info
   display: inline-block
   border-right: 1px dashed #ddd
@@ -51,9 +57,15 @@
     margin: 0 0 6px 28px
     font-size: 14px
     text-align: left
-    color: #111
+    color: deep-text-gray
+    .file-count, .first-file-name
+      display: inline-block
+      overflow: hidden
     .first-file-name
-      margin-left: 34px
+      margin-left: 36px
+      max-width: 350px
+      white-space: nowrap
+      text-overflow: ellipsis
 .item-count
   display: inline-block
   width: 18%
