--- a/src/style/_variables.styl
+++ b/src/style/_variables.styl
@@ -16,6 +16,7 @@ descrip-back = #f9f9f9
 color-banner-back = #fbf7f4
 global-background-color = #f2f2f2
 border-gray = #e7eaf1
+gray-text = #999
 gray-bluish-inconspicuous-text = #8590a6
 shallow-text-gray = #666
 deep-black = #333
@@ -34,6 +35,7 @@ scrollbarWidth = 8px
 scrollbar(barWidth=scrollbarWidth)
   &::-webkit-scrollbar
     width: barWidth
+    height: barWidth
     background-color: rgba(#000, .05)
     &-thumb
       border-radius: barWidth
